demo/antreapolicy/02-zero-trust.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: default-deny-all
spec:
  priority: 1
  tier: baseline
  appliedTo:
    - namespaceSelector: {}
  ingress:
    - action: Drop
      enableLogging: true
  egress:
    - action: Drop
      enableLogging: true
