demo/antreapolicy/04-to-services.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: acnp-allow-to-kube-dns
spec:
  priority: 1
  tier: securityops
  appliedTo:
    - namespaceSelector: {}
  egress:
    - action: Allow
      toServices:
        - name: kube-dns
          namespace: kube-system
      enableLogging: true
